# OpenCVDemo

app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/inc/: LogUtils.h  TimeUtils.h
app/src/main/cpp/src/: native-lib.cpp
app/src/main/java/com/afei/opencvdemo/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
